# planetary-simulation

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  cubemap.h  engine.h  model.h  model_renderer.h  object_factory.h  particle_renderer.h  physics_system.h  render_system.h  resource_manager.h  shader.h  skybox_renderer.h  stb_truetype.h  texture.h  types.h  utils.h  widget_renderer.h  widgets.h  world.h
include/glad/: glad.h
presets/: collisions.txt  empty.txt  simple_orbit.txt  solar_system.txt  solar_system_bak.txt  three_bodies.txt  three_planets.txt  two_bodies.txt
shaders/: debug.vert  diffuse.frag  diffuse.vert  diffuse_sphere.vert  objectphy.comp  particle.frag  particle.vert  particlephy.comp  skybox.frag  skybox.vert  sun.frag  trail.frag  trail.vert
src/: compile_flags.txt  cubemap.cpp  engine.cpp  glad.c  main.cpp  model.cpp  model_renderer.cpp  object_factory.cpp  particle_renderer.cpp  physics_system.cpp  render_system.cpp  resource_manager.cpp  shader.cpp  skybox_renderer.cpp  texture.cpp  utils.cpp  widget_renderer.cpp  world.cpp
